remove white bakground color on profile, about,profile,setting and update manager

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,21 +8,11 @@
 
 <ion-content class="about">
   <div *ngIf="loadingData">
-    <ion-grid>
-      <ion-row>
-        <ion-col >
-          <ion-list>
-            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-              {{ message }}
-              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="favorite"></ion-icon>
-              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-                <page-loading loadingSize="small"></page-loading>
-              </div>
-            </ion-item>
-          </ion-list>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <ion-row >
+      <ion-col >
+        <page-loading loadingSize="large" [loadingMessage]="loadingMessages[loadingMessages.length - 1]"></page-loading>
+      </ion-col>
+    </ion-row>
   </div>
 
   <div *ngIf="!loadingData" >
@@ -77,24 +67,11 @@
               <b>System Information</b>
             </ion-item-divider>
             <div *ngFor="let entry of systemInformation;let currentSystemInfoIndex = index">
-              <ion-item  *ngIf="currentSystemInfoIndex < hideAndShowObject.systemInformation.count">
+              <ion-item >
                 <h2>{{ entry.key }}</h2>
                 <p>{{ entry.value }}</p>
               </ion-item>
             </div>
-            <ion-item *ngIf="hideAndShowObject.systemInformation.count <= systemInformation.length " >
-              <div item-right>
-                <button class="normalButton" ion-button clear  text-capitalize (tap)="hideAndShowDetails('systemInformation',systemInformation.length)">
-                  <div *ngIf="hideAndShowObject.systemInformation.status">
-                    Show less
-                  </div>
-                  <div *ngIf="!hideAndShowObject.systemInformation.status">
-                    Show more
-                  </div>
-                </button>
-              </div>
-            </ion-item>
-
           </ion-item-group>
         </ion-col>
       </ion-row>
