--- a/src/pages/dashboard-search/dashboard-search.html
+++ b/src/pages/dashboard-search/dashboard-search.html
@@ -19,13 +19,13 @@
   <ion-grid>
     <ion-searchbar animated="true"autocomplete="on" placeholder="Search dashboard by name"  (ionInput)="getFilteredList($event)"></ion-searchbar>
     <ion-row>
-      <ion-col >
+      <ion-col width="100">
         <ion-list>
           <ion-item *ngFor="let dashboard of dashboards" (tap)="setCurrentDashboard(dashboard)" class="list-separator">
             <span ion-text [color]="(currentDashboardName == dashboard.name) ?'current' : 'font-color'" >{{ dashboard.name }}</span>
           </ion-item>
           <ion-item *ngIf="dashboards.length == 0">
-            There no dashboard found
+            <empty-list-notification [emptyListMessage]="'There no dashboard found'"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
