--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -130,7 +130,7 @@
             <ion-row>
               <ion-col >
                 <div  style="text-align: center;">
-                  There are no events at the moment
+                  <empty-list-notification [emptyListMessage]="'There are no events at the moment'"></empty-list-notification>
                 </div>
               </ion-col>
             </ion-row>
