--- a/src/pages/program-selection/program-selection.html
+++ b/src/pages/program-selection/program-selection.html
@@ -6,7 +6,6 @@
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
         close
-        <!--<ion-icon name="md-close"></ion-icon>-->
       </button>
     </ion-buttons>
   </ion-toolbar>
@@ -23,7 +22,7 @@
             <span (tap)="setSelectedProgram(program)" ion-text [color]="(currentSelectedProgram == program.name)? 'current': 'font-color'" >{{ program.name}}</span>
           </ion-item>
           <ion-item *ngIf = "programsList.length == 0">
-            There is no Program to select
+            <empty-list-notification [emptyListMessage]="'There is no Program to select'"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
